objects/Table_Action_Config__c.object
<CustomObject>
    <fields>
        <fullName>Action_Class__c</fullName>
        <label>Action Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Table_Config__c</fullName>
        <label>Table Config</label>
        <referenceTo>Table_Config__c</referenceTo>
        <relationshipLabel>Table Actions Config</relationshipLabel>
        <relationshipName>Table_Actions_Config</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Table Action Config</label>
    <nameField>
        <label>Table Action Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Table Actions Config</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>